--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,21 @@ jobs:
               run: npm ci
             - name: Run tests
               run: npm test
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get Code
+              uses: actions/checkout@v4
+            - name: Install Node JS
+              uses: actions/setup-node@v4
+              with: 
+                node-version: 18
+            - name: Install dependencies
+              run: npm ci
+            - name: Build Project
+              run: npm run build
+            - name: Deploy
+              run: echo "Deploying to server"
             
 
               
