--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
             - name: Run tests
               run: npm test
     deploy:
+        # test must complete before we deploy
+        needs: test
         runs-on: ubuntu-latest
         steps:
             - name: Get Code
