Add a second workflow for outputting context

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: Second Workflow
-on: push
+# Either on push or manually
+on: [push, workflow_dispatch]
 jobs:
     test:
         runs-on: ubuntu-latest
